--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,13 +24,16 @@ jobs:
            registry: ghcr.io
            username: ${{ github.repository_owner}}
            password: ${{ secrets.GITHUB_TOKEN}}
-
+        
+      - name: Buildx Action
+        uses: docker/setup-buildx-action@v3
+        
       - name: Build and Push Image
         uses: docker/build-push-action@v6
         with:
             context: .
             push: true
-            tag: |
+            tags: |
               ${{ vars.DOCKER_USERNAME }}/nodeapp:${{ github.sha}}
               ghcr.io/${{ github.repository_owner }}/nodeapp:${{ github.sha}}
 
