--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   docker-image:
     runs-on: self-hosted
+    permissions:
+        packages: write
+
     steps:
       - name: Repo Checkout
         uses: actions/checkout@v4
@@ -27,7 +30,7 @@ jobs:
         
       - name: Buildx Action
         uses: docker/setup-buildx-action@v3
-        
+
       - name: Build and Push Image
         uses: docker/build-push-action@v6
         with:
