--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,5 +39,26 @@ jobs:
             tags: |
               ${{ vars.DOCKER_USERNAME }}/nodeapp:${{ github.sha}}
               ghcr.io/${{ github.repository_owner }}/nodeapp:${{ github.sha}}
+   
+  deploy:
+    runs-on: self-hosted
 
+    steps:
+        - name: Repo Checkout
+          uses: actions/checkout@v4
+
+        - name: Install kubectl CLI
+          uses: azure/setup-kubectl@v4
+        
+        - name: Set Kube Config
+          uses: azure/k8s-set-context@v4
+          with:
+            method: kubeconfig
+            kubeconfig: ${{ secrets.KUBECONFIG }}
+
+        - name: Fetch Kubernetes Cluster Details
+          run: | 
+            kubectl version
+            echo -------------------
+            kubectl get nodes
 
