--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,6 +41,7 @@ jobs:
               ghcr.io/${{ github.repository_owner }}/nodeapp:${{ github.sha}}
    
   deploy:
+    needs: docker-image
     runs-on: self-hosted
 
     steps:
