--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -65,6 +65,7 @@ jobs:
            cluster_name: ${{ env.GKE_CLUSTER }}
            location: ${{ env.GKE_ZONE }}
            credentials: ${{ secrets.GKE_SA_KEY }}
+           project_id: ${{ secrets.GKE_PROJECT }}
         
         - name: Get GKE nodes
           run: kubectl get nodes
