--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -52,21 +52,11 @@ jobs:
 
         - name: Install kubectl CLI
           uses: azure/setup-kubectl@v4
+        
+        - name: GCP Authentication
+          uses: google-github-actions/auth@v2
+          with:
+            credentials_json: ${{ secrets.GKE_SA_KEY }}
 
-        - name: gcloud Setup
-          uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
-          with:
-           service_account_key: ${{ secrets.GKE_SA_KEY }}
-           project_id: ${{ secrets.GKE_PROJECT }}
         
-        - name: Get GKE Credentials
-          uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
-          with:
-           cluster_name: ${{ env.GKE_CLUSTER }}
-           location: ${{ env.GKE_ZONE }}
-           credentials: ${{ secrets.GKE_SA_KEY }}
-           project_id: ${{ secrets.GKE_PROJECT }}
-        
-        - name: Get GKE nodes
-          run: kubectl get nodes
 
