--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -58,5 +58,11 @@ jobs:
           with:
             credentials_json: ${{ secrets.GKE_SA_KEY }}
 
+        - name: Get GKE Credentials
+          uses: 'google-github-actions/get-gke-credentials@v2'
+          with:
+            cluster_name: ${{ env.GKE_CLUSTER }}
+            location: ${{ env.GKE_ZONE }}
+            project_id: ${{ secrets.GKE_PROJECT }}
         
 
