--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -66,7 +66,7 @@ jobs:
             project_id: ${{ secrets.GKE_PROJECT }}
         
         - name: GKE Nodes
-          uses: kubectl get nodes
-          
+          run: 'kubectl get nodes'
+
         
 
